<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ia-ma, nene!</string>
    <string name="username">Username</string>
    <string name="usernameHint">Enter your username!</string>
    <string name="password">Password</string>
    <string name="rePassword">Retype password</string>
    <string name="passwordHint">Enter your password</string>
    <string name="repasswordHint">Retype your password</string>
    <string name="passenger">Passenger</string>
    <string name="driver">Driver</string>
    <string name="logIn">Log in!</string>
    <string name="signUp">Sign up!</string>
    <string name="next">Next</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="birthDate">Birth Date</string>
    <string name="action_settings">User profile</string>
    <string name="title_activity_display_message">Log in!</string>
    <string name="bio">Bio (Optional)</string>
    <string name="lookingTo">Looking to</string>
    <string name="city">City</string>
    <string name="commute_period">Commute Period</string>
    <string name="seats_no">Free seats</string>
    <string name="start_location">Start location</string>
    <string name="end_location">End location</string>
    <string name="ride">Ride</string>
    <string name="drive">Drive</string>
    <string name="loginFailed">Login Failed! Please check your credentials!</string>
    <string name="passMatchFailed">Retyped password doesn\'t match password! Please retype</string>
    <string name="finishRegistration">Finish</string>
    <string name="title_activity_sign_up_activity1">Sign up step 1</string>
    <string name="title_activity_sign_up_activity2">Sign up step 2</string>
    <string name="title_activity_sign_up_activity3">Sign up step 3</string>
    <string name="firstNameHint">Enter your First Name</string>
    <string name="lastNameHint">Enter your Last Name</string>
    <string name="email">E-mail</string>
    <string name="emailHint">Enter your e-mail</string>
    <string name="phone">Phone</string>
    <string name="phoneHint">Enter your phone number</string>
    <string name="cityHint"> Enter your City</string>
    <string name="smoker">Smoker</string>
    <string name="ranking">Ranking</string>
    <string name="availableCarpools">Available Carpools</string>
    <string name="history">Show history</string>
    <string name="addCarpool">Add new Carpool</string>
    <string name="addEditCar">Add/Edit Car</string>
    <string name="carnumber">License plate</string>
    <string name="brand">Brand</string>
    <string name="color">Color</string>
    <string name="seatsNo">Seats number</string>
    <string name="year">Acquisition year</string>
    <string name="addCarButton">Add car</string>
    <string name="addEditCarButton">Add/Edit car</string>
    <string name="source">Source</string>
    <string name="destination">Destination</string>
    <string name="date">Date</string>
    <string name="hour">Hour</string>
    <string name="itinerary">Itinerary</string>
    <string name="price">Price</string>
    <string name="duration">Duration</string>
    <string name="commutePeriod">Commute Period</string>
    <string name="search">Search</string>
    <string name="advancedOptions">Advanced Options</string>
    <string name="title_activity_choose_role">Choose Role</string>
    <string name="title_activity_passenger">Passenger</string>
    <string name="title_activity_driver">Driver</string>
    <string name="title_activity_add_car">Add Car</string>
    <string name="title_activity_add_carpool">Add Carpool - Step 1</string>
    <string name="title_activity_add_carpool2">Add Carpool - Step 2</string>
    <string name="title_activity_add_carpool3">Add Carpool - Step 3</string>
    <string name="userExists">Username already exists in database! Please choose a different username!</string>
    <string name="title_activity_show_history">Show History</string>
    <string name="birthDateHint">Enter date in format: YYYY-MM-DD</string>
    <string name="accountCreatedMessageSuccess">Your account was created successfully!</string>
    <string name="ok">OK</string>
    <string name="notAllFieldsCompleted">Not all fields completed!</string>
    <string name="title_activity_add_edit_car">Add/Edit Car</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_search_results">Search Results</string>
    <string name="title_activity_search_carpools">Search Carpools</string>
    <string name="title_activity_advanced_options">Advanced Options</string>
    <string name="title_activity_driver_information">Driver Information</string>
	<string name="joinedCarpools">Joined Carpools</string>
	<string name="saveChanges">Save changes</string>
	<string name="title_activity_user_information">User Information</string>

    
</resources>
